--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="app"></div>
-    <script src="./src/js/jiajia-doc.js"></script>
+    <script src="./src/js/jiajia-manual.js"></script>
     <script src="./src/js/docsify.min.js"></script>
     <script src="./src/js/search.js"></script>
 </body>
